# rust_django

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  WALKTHROUGH.md  compose.yaml  cookies.txt  記事作成用メモ.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220102_000001_create_admin_user.rs  m20240101_000001_create_todo_table.rs  m20250101_000001_create_group_table.rs  m20250102_000001_add_group_to_todo.rs  m20260203_000001_create_permission_tables.rs  m20260204_000001_fix_table_names.rs  m20260205_000001_seed_permissions.rs
src/: auth_utils.rs  csrf.rs  db.rs  errors.rs  lib.rs  macros.rs  main.rs  validation.rs
src/controllers/: admin.rs  admin_groups.rs  admin_users.rs  auth.rs  mod.rs  todo.rs
src/entities/: group.rs  group_permission.rs  group_user.rs  mod.rs  permission.rs  prelude.rs  todo.rs  user.rs  user_permission.rs
src/fairings/: context.rs
src/guards/: auth.rs
src/services/: user_service.rs
src/views/: app_template.rs  edit.rs  list.rs  mod.rs
static/css/: style.css
templates/: base.html.tera  index.html.tera  welcome.html.tera
templates/admin/: base.html.tera  dashboard.html.tera  form.html.tera  group_form.html.tera  group_list.html.tera  list.html.tera
templates/todo/: form.html.tera  item_partial.html.tera  list.html.tera
tests/: admin_group_tests.rs  admin_user_tests.rs
tests/common/: mod.rs
